src/tests/testfiles/function-call-parameter-type-3.txt
Error at 6:5: Arguments to function 'f' don't match: int rvalue vs float
f(0);
  ^
